[Refactor] domain segregation