@@ -5,12 +5,14 @@ import com.cpayusin.board.controller.response.BoardChildrenResponse;
 import com.cpayusin.board.controller.response.BoardCreateResponse;
 import com.cpayusin.board.controller.response.BoardMenuResponse;
 import com.cpayusin.board.controller.response.BoardResponse;
+import com.cpayusin.board.domain.BoardDomain;
 import com.cpayusin.board.infrastructure.Board;
 import com.cpayusin.board.domain.type.BoardType;
 import com.cpayusin.board.service.port.BoardRepository;
 import com.cpayusin.common.exception.BusinessLogicException;
 import com.cpayusin.common.exception.ExceptionMessage;
 import com.cpayusin.mapper.BoardMapper;
+import com.cpayusin.member.domain.MemberDomain;
 import com.cpayusin.member.infrastructure.Member;
 import com.cpayusin.board.controller.request.BoardCreateRequest;
 import com.cpayusin.board.controller.request.BoardUpdateRequest;
@@ -22,10 +24,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.toList;
 
 @RequiredArgsConstructor
@@ -39,104 +41,139 @@ public class BoardServiceImpl implements BoardService
     private final PostService postService;
 
     @Transactional
-    public BoardCreateResponse createBoard(BoardCreateRequest request, Member currentMember)
+    @Override
+    public BoardCreateResponse createBoard(BoardCreateRequest request, MemberDomain memberDomain)
     {
-        utilService.isAdmin(currentMember);
-        Board board = BoardMapper.INSTANCE.toBoardEntity(request);
+        utilService.isAdmin(memberDomain);
+        BoardDomain boardDomain;
+
         if (request.getParentId() != null) {
-            Board parent = getBoardById(request.getParentId());
-            if (parent.getParent() != null)
-                throw new BusinessLogicException(ExceptionMessage.BOARD_TYPE_ERROR);
-            board.addParent(parent);
-            Integer orderIndex = boardRepository.countChildrenByParentId(parent.getId());
-            board.updateOrderIndex(orderIndex + 1);
-            board.updateBoardType(BoardType.CATEGORY.getCode());
+            BoardDomain parent = getBoardById(request.getParentId());
+
+            int orderIndex = boardRepository.countChildrenByParentId(parent.getId()) + 1;
+
+            boardDomain = BoardDomain.categoryFrom(request, orderIndex, parent);
         } else {
-            Integer orderIndex = boardRepository.countParent();
-            board.updateOrderIndex(orderIndex + 1);
+            int orderIndex = boardRepository.countParent() + 1;
+            boardDomain = BoardDomain.boardFrom(request, orderIndex);
         }
-        return BoardMapper.INSTANCE.toBoardCreateResponse(boardRepository.save(board));
+        boardDomain = boardRepository.save(boardDomain);
+        return BoardCreateResponse.from(boardDomain);
     }
 
 
     @Transactional
-    public List<BoardMenuResponse> bulkUpdateBoards(List<BoardUpdateRequest> requests, Member currentMember)
+    @Override
+    public void bulkUpdateBoards(List<BoardUpdateRequest> requests, MemberDomain currentMember)
     {
         utilService.isAdmin(currentMember);
-        List<BoardUpdateRequest> removedBoardList = requests.stream()
-                .filter(board -> board.getIsDeleted() != null && board.getIsDeleted())
-                .toList();
-        List<BoardUpdateRequest> updateBoardList = requests.stream()
+
+        List<Long> removedList = filterRemoveBoard(requests);
+        List<BoardUpdateRequest> updateBoardList = filterUpdateBoard(requests);
+
+        List<BoardDomain> boardDomains = updateBoard(updateBoardList);
+        boardRepository.saveAll(boardDomains);
+
+        removedList.forEach(this::removeAllChildrenBoard);
+        removedList.forEach(this::deleteBoard);
+    }
+
+    private List<BoardDomain> updateCategory(BoardDomain parent, List<CategoryUpdateRequest> requests)
+    {
+        List<BoardDomain> domains = new ArrayList<>();
+        for(CategoryUpdateRequest request : requests)
+        {
+            if (request.getIsDeleted() != null && request.getIsDeleted())
+                deleteBoard(request.getId());
+
+            BoardDomain category = getBoardById(request.getId());
+
+            category = category.update(request, parent);
+            domains.add(category);
+        }
+        return domains;
+    }
+
+    private List<BoardUpdateRequest> filterUpdateBoard(List<BoardUpdateRequest> requests)
+    {
+        return requests.stream()
                 .filter(board -> board.getIsDeleted() == null || !board.getIsDeleted())
                 .toList();
-        updateBoardList
-                .forEach(request -> {
-                    Board board = getBoardById(request.getId());
-                    BoardMapper.INSTANCE.updateBoard(request, board);
-                    board.setParent(null);
-                    board.setType(BoardType.BOARD.getCode());
-                    if (!request.getCategory().isEmpty())
-                        updateCategory(board, request.getCategory());
-                });
-        removedBoardList
-                .forEach(request -> {
-                    getBoardById(request.getId());
-                    removeAllChildrenBoard(request.getId());
-                    deleteBoard(request.getId());
-                });
-        return getMenuList();
     }
 
-    public void updateCategory(Board parent, List<CategoryUpdateRequest> requests)
+    private List<Long> filterRemoveBoard(List<BoardUpdateRequest> requests)
     {
-        requests.forEach(
-                request -> {
-                    Board category = getBoardById(request.getId());
-                    if (request.getIsDeleted() != null && request.getIsDeleted())
-                        deleteBoard(request.getId());
-                    else {
-                        BoardMapper.INSTANCE.updateBoard(request, category);
-                        category.setType(BoardType.CATEGORY.getCode());
-                        category.addParent(parent);
-                    }
-                }
-        );
+        return requests.stream()
+                .filter(board -> board.getIsDeleted() == null || !board.getIsDeleted())
+                .map(BoardUpdateRequest::getId)
+                .toList();
     }
 
-    public Board getBoardById(Long boardId)
+    private List<BoardDomain> updateBoard(List<BoardUpdateRequest> requests)
+    {
+        List<BoardDomain> boardDomains = new ArrayList<>();
+        for(BoardUpdateRequest request : requests)
+        {
+            BoardDomain boardDomain = getBoardById(request.getId());
+            boardDomain.update(request);
+
+            if(!request.getCategory().isEmpty()){
+                boardDomains.addAll(updateCategory(boardDomain, request.getCategory()));
+            }
+        }
+
+        return boardDomains;
+    }
+
+    @Override
+    public BoardDomain getBoardById(Long boardId)
     {
         return boardRepository.findById(boardId)
                 .orElseThrow(() -> new BusinessLogicException(ExceptionMessage.BOARD_NOT_FOUND));
     }
 
+    @Override
     public BoardResponse findBoardById(Long boardId)
     {
-        return BoardMapper.INSTANCE.boardToResponse(getBoardById(boardId));
+        return BoardResponse.from(getBoardById(boardId));
     }
 
+    @Override
     public List<BoardResponse> findCategoryByBoardId(Long boardId)
     {
-        var result = boardRepository.findBoardByParentBoardId(boardId);
-        return BoardMapper.INSTANCE.toBoardResponseList(result);
+        return boardRepository.findBoardByParentBoardId(boardId).stream()
+                .map(BoardResponse::from)
+                .toList();
     }
 
+    @Override
     public List<BoardMenuResponse> getMenuList()
     {
-        List<Board> result = boardRepository.findAll();
+        List<BoardDomain> result = boardRepository.findAll();
         if (result.isEmpty())
             return Collections.emptyList();
-        List<BoardMenuResponse> boardList = BoardMapper.INSTANCE.toBoardMenuResponse(result.stream()
+
+        List<BoardMenuResponse> boardList = result.stream()
                 .filter(board -> board.getType().equals(BoardType.BOARD.getCode()))
-                .sorted(Comparator.comparingInt(Board::getOrderIndex))
-                .collect(toList()));
-        List<BoardChildrenResponse> categoryList = BoardMapper.INSTANCE.toChildrenList(result.stream()
-                .filter(board -> board.getType().equals(BoardType.CATEGORY.getCode()))
-                .sorted(Comparator.comparingInt(Board::getOrderIndex))
-                .collect(toList()));
-        boardList.forEach(board -> board.setCategory(
-                categoryList.stream()
-                        .filter(category -> category.getParentId().equals(board.getId()))
-                        .collect(toList())));
+                .sorted(Comparator.comparingInt(BoardDomain::getOrderIndex))
+                .map(BoardMenuResponse::from)
+                .toList();
+
+
+        Map<Long, List<BoardChildrenResponse>> categoryMap = result.stream()
+                .filter(b -> b.getType().equals(BoardType.CATEGORY.getCode()))
+                .sorted(Comparator.comparingInt(BoardDomain::getOrderIndex))
+                .collect(groupingBy(
+                        b -> b.getParent().getId(),
+                        Collectors.mapping(
+                                b -> BoardChildrenResponse.from(b.getParent().getId(), b),
+                                toList()
+                        )
+                ));
+
+        boardList.forEach(b ->
+                b.addCategory(categoryMap.getOrDefault(b.getId(), Collections.emptyList())));
+
         return boardList;
     }
 
@@ -154,7 +191,7 @@ public class BoardServiceImpl implements BoardService
 
     private void removeAllChildrenBoard(Long boardId)
     {
-        List<Board> childrenList = boardRepository.findBoardByParentBoardId(boardId);
+        List<BoardDomain> childrenList = boardRepository.findBoardByParentBoardId(boardId);
         if (!childrenList.isEmpty())
             childrenList.forEach(childBoard -> {
                 deleteBoard(childBoard.getId());
